--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,108 +1,84 @@
-name: infra creation
+name: Infra Provisioning through Terraform
+
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Environment to deploy (eg., dev, staging, prod)"
+        required: true
+        default: "dev"
+        type: choice
+        options:
+        - dev
+        - staging
+        - prod
+  
   pull_request:
     branches:
       - main
-
+      
 permissions:
-  id-token: write
-  contents: write
+  contents: read
   pull-requests: write
+  id-token: write
 
 jobs:
   terraform:
+    name: Terraform
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.ref || github.ref }}
-          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up AWS credentials with OIDC
+      # Step: Set up Terraform
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.5
+      - name: Install & Configure TFLint
+        run: |
+         curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+         tflint --init
+      - name: validate tf configuration
+        run: |
+         tflint
+        continue-on-error: true
+        
+        # Set up AWS credentials
+      - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: arn:aws:iam::877786395093:role/github-oidc-vamsee
-          aws-region: us-west-2
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-
-      - name: Terraform Init
-        run: terraform init -reconfigure
-        working-directory: ./Infra
-
-      - name: Terraform test
-        run: |
-         terraform test
-        continue-on-error: true
-        working-directory: ./Infra
-
-      - name: Terraform fmt
-        run: terraform fmt
-        working-directory: ./Infra
+          aws-region: ap-south-1
+          id-token: true
         
-      - name: Terraform validate
-        run: terraform validate
-        working-directory: ./Infra
-        
-      - name: Terraform plan
-        run: terraform plan -var-file="../environments/dev/terraform.tfvars"
-        working-directory: ./Infra
-
-      - name: Lint Terraform Code
-        run: |
-          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
-          tflint --init
-          tflint --config .tflint.hcl
-        working-directory: ./Infra
-        
+       # Step: Install Checkov
       - name: Install Checkov
-        run: pip install checkov
- 
-      - name: Run Checkov with soft fail
         run: |
           pip install checkov
-          checkov --directory . --soft-fail
-        working-directory: ./Infra
+          checkov --version
 
-      - name: Generate Markdown with Terraform Docs
-        if: github.event_name == 'push' || github.event_name == 'pull_request'
-        uses: terraform-docs/gh-actions@v1.3.0
-        with:
-          working-dir: ./Infra
-          output-file: README.md
-          output-method: inject
-          git-push: true
-          config-file: .terraform-docs.yml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Configure Git
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
-      - name: Posting README.md as PR Comment
-        if: github.event_name == 'pull_request'
-        uses: marocchino/sticky-pull-request-comment@v2.9.0
-        with:
-          working-dir: ./Infra
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          header: "Terraform Documentation "
-          path: "./Infra/README.md"
-
-
-      - name: Applying Terraform after PR Merge
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
+          
+      # Step: Terraform Init
+      - name: Terraform Init
+        run: | 
+          cd Infra
           terraform init
-          terraform apply -var-file="../environments/dev/terraform.tfvars" -auto-approve
-        working-directory: ./Infra
 
-      
+      # Step: Run Terraform Validate (validate configuration files)
+      - name: Terraform Validate
+        run: |
+          cd Infra
+          terraform validate
+
+      # Step: Terraform Plan
+      - name: Terraform Plan
+        run: |
+          cd Infra
+          terraform plan -var-file=../environments/dev/terraform.tfvars
+    
+      # Step: Apply Terraform
+      - name: Apply Terraform
+        run: |
+          cd Infra
+          terraform apply -auto-approve -var-file=../environments/dev/terraform.tfvars
